testdata/parser/negative/26.txt
Parse error at 26.pdl:4:2: Illegal break: no surrounding while statement
	break; // illegal
	^
